# dodo-payments-rs

./: Cargo.toml  README.md
examples/: activate_license.rs  archive_meter.rs  archive_product.rs  change_plan.rs  checkout_sessions.rs  create_addon.rs  create_brand.rs  create_charge.rs  create_customer.rs  create_customer_portal_session.rs  create_customer_wallet_ledger_entry.rs  create_discount.rs  create_meter.rs  create_product.rs  create_refund.rs  create_subscription.rs  create_webhook.rs  deactivate_license.rs  delete_discount.rs  delete_webhook.rs  get_addon.rs  get_brand.rs  get_customer.rs  get_customer_wallets.rs  get_dispute.rs  get_event.rs  get_invoice.rs  get_license_key.rs  get_license_key_instance.rs  get_license_key_instances.rs  get_license_keys.rs  get_line_items.rs  get_meter.rs  get_payment_details.rs  get_product.rs  get_refund.rs  get_refund_receipt.rs  get_subscription.rs  get_subscription_usage_history.rs  get_webhook.rs  (+36 more)
src/: client.rs  common.rs  errors.rs  lib.rs  operations.rs
src/operations/: checkout_sessions.rs  common.rs  mod.rs
src/operations/activate_license/: builder.rs  config.rs  request.rs  response.rs
src/operations/archive_meter/: builder.rs  config.rs  request.rs  response.rs
src/operations/archive_product/: builder.rs  config.rs  request.rs  response.rs
src/operations/change_plan/: builder.rs  config.rs  request.rs  response.rs
src/operations/checkout_sessions/: builder.rs  config.rs  mod.rs  request.rs  response.rs
src/operations/common/: structs.rs
src/operations/create_addon/: builder.rs  config.rs  (+2 more)
(+290 files in other folders)
