[package]
name = "dodo_payments"
version = "0.1.0"
edition = "2024"
exclude = ["./examples"]

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
reqwest = "0.12.23"
serde = "1.0.223"
serde_json = "1.0.145"
serde_valid = "1.0.5"
serde_with = "3.14.0"
serde_bytes = "0.11"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
