[package]
name = "dodo_payments"
description = "This is Unoffical SDK of dodopayments.com"
authors = ["Piyush Raj <piyushxcoder@gmail.com>"]
version = "0.1.0"
edition = "2024"
exclude = ["./examples"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/PiyushXCoder/dodo-payments-rs"
keywords = ["dodopayments", "payment"]

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
reqwest = "0.12.23"
serde = "1.0.223"
serde_json = "1.0.145"
serde_valid = "1.0.5"
serde_with = "3.14.0"
serde_bytes = "0.11"
serde_qs = "0.12"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
derive_more = { version = "2.0.1", features = ["display"] }
